# xoverrr

./: .coverage  .gitignore  COTRIBUTE.md  LICENSE  README.md  __init__.py  core.py  migrate.sh  project_snap.py  pyproject.toml  refresh_env.txt  setup.py  snapshot_blacklist  snapshot_whitelist  test_parse.py  utils.py  xoverrr_lib.txt
adapters/: clickhouse.py  oracle.py  postgres.py
ci/: README.md  conftest.py
ci/docker/: docker-compose.yml
ci/docker/clickhouse/: init.sql
ci/docker/oracle/: init.sql
ci/docker/oracle_xe/: init.sql
ci/docker/postgres/: init.sql
ci/tests/: test_oracle_postgres_compare.py
src/: __init__.py  run_unit_tests.py
src/xoverrr/: __init__.py  constants.py  core.py  exceptions.py  logger.py  models.py  persistence.py  reporting.py  utils.py
src/xoverrr/adapters/: __init__.py  base.py  clickhouse.py  oracle.py  postgres.py
tests/: README.md
tests/integration/: conftest.py  test_edge_cases.py
tests/integration/cross_db/clickhouse_oracle/: test_ch_ora_count_identical.py  test_ch_ora_count_various_date_types.py  test_ch_ora_counts_identical.py  test_ch_ora_counts_timezones.py  test_ch_ora_counts_various_date_types.py  test_ch_ora_custom_query_timezones.py  test_ch_ora_numeric_edge.py  test_ch_ora_sample_discrepant.py  test_ch_ora_sample_identical.py  test_ch_ora_sample_timezones.py  (+3 more)
tests/integration/data_types/: test_data_types.py
tests/integration/docker/: docker-compose.yml
tests/integration/edge_cases/: test_edge_cases.py
tests/unit/: test_core_chunking.py  test_persistence.py  test_sniff_query.py  test_utils.py
(+70 files in other folders)
